--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Chay MiniApp</title>
+  
+  <!-- ✅ Thẻ xác thực domain Zalo -->
+  <meta name="zalo-platform-site-verification" content="UOUU0glmD1ufvAG-qiij02_2fnx3j754CZGs" />
+
   <style>
     body {
       font-family: sans-serif;
